Fix opacity for disabled inputs on iOS

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -14,6 +14,9 @@ input {
     input[type="text"] {
         width: 110%;
     }
+    input[type="text"]:disabled {
+        opacity: 1;
+    }
 }
 
 button {
